feat: add new club experience

--- a/en/index.html
+++ b/en/index.html
@@ -124,8 +124,14 @@
 
             <h3 class="enw2" id="communities">Clubs & Communities</h3>
             <div class="scrollitems">
+                <a class="item open-popup" href="#" data-name="act_utcssa" data-lang="en">
                     <picture>
+                        <source srcset="/pictures/profile_use/experience/utcssa.webp" type="image/webp">
+                        <source srcset="/pictures/profile_use/experience/utcssa.jpg" type="image/jpg">
+                        <img src="/pictures/profile_use/experience/utcssa.jpg" alt="UTCSSA's logo" width="144" height="144">
                     </picture>
+                    <p class="title enw2">UTCS Student Association</p>
+                    <p class="time enw2">Jul 2025 - Present</p>
                 </a>
                 <a class="item open-popup" href="#" data-name="act_utsa" data-lang="en">
                     <picture>
