--- a/index.html
+++ b/index.html
@@ -122,8 +122,14 @@
             
             <h3 class="zhw" id="communities">社團與社群</h3>
             <div class="scrollitems">
+                <a class="item open-popup" href="#" data-name="act_utcssa" data-lang="tw">
                     <picture>
+                        <source srcset="/pictures/profile_use/experience/utcssa.webp" type="image/webp">
+                        <source srcset="/pictures/profile_use/experience/utcssa.jpg" type="image/jpg">
+                        <img src="/pictures/profile_use/experience/utcssa.jpg" alt="臺北市立大學資訊科學系系學會標誌" width="144" height="144">
                     </picture>
+                    <p class="title zhw">臺北市立大學資訊科學系系學會</p>
+                    <p class="time zhw">Jul 2025 - Present</p>
                 </a>
                 <a class="item open-popup" href="#" data-name="act_utsa" data-lang="tw">
                     <picture>
