feat: add experience of competitions

--- a/en/index.html
+++ b/en/index.html
@@ -75,6 +75,7 @@
             <button class="enw2" onclick="scrollToBlock('communities')">Clubs & Communities</button>
             <button class="enw2" onclick="scrollToBlock('skills')" style="display: none;">Skills</button>
             <button class="enw2" onclick="scrollToBlock('certifications')">Licenses & Certifications</button>
+            <button class="enw2" onclick="scrollToBlock('compititions')">Competitions</button>
             <button class="enw2" onclick="scrollToBlock('links')">Links</button>
             <script src="/scripts/subnav.js" type="text/javascript" defer></script>
         </div>
@@ -217,6 +218,98 @@
                 </a>
             </div>
 
+            <h3 class="enw2" id="compititions">Competitions</h3>
+            <details class="list" id="2025-compititions" open>
+                <summary class="enw1">2025</summary>
+                <ul>
+                    <li>
+                        <span class="title enw1">2025 National Collegiate Programming Contest</span>
+                        <br>
+                        <span class="description enw2">National Sun Yat-sen University</span>
+                        <br>
+                        <span class="description enw2">TBA</span>
+                        <br>
+                        <span class="time enw2">Sep 28, 2025</span>
+                    </li>
+                    <li>
+                        <span class="title enw1">The 2025 ICPC Asia Taiwan Online Programming Contest</span>
+                        <br>
+                        <span class="description enw2">National Yang Ming Chiao Tung University</span>
+                        <br>
+                        <span class="description enw2">TBA</span>
+                        <br>
+                        <span class="time enw2">Sep 20, 2025</span>
+                    </li>
+                    <li>
+                        <span class="title enw1">Collegiate Programming Examination</span>
+                        <br>
+                        <span class="description enw2">Association of Taiwan Computer Programming Contest</span>
+                        <br>
+                        <span class="description enw2">98 th / 2515 (Solved: 4 / 7)</span>
+                        <br>
+                        <span class="time enw2">May 20, 2025</span>
+                    </li>
+                    <li>
+                        <span class="title enw1">Collegiate Programming Examination</span>
+                        <br>
+                        <span class="description enw2">Association of Taiwan Computer Programming Contest</span>
+                        <br>
+                        <span class="description enw2">71 st / 2729 (Solved: 4 / 7)</span>
+                        <br>
+                        <span class="time enw2">Mar 25, 2025</span>
+                    </li>
+                    <li>
+                        <span class="title enw1">picoCTF 2025</span>
+                        <br>
+                        <span class="description enw2">picoCTF</span>
+                        <br>
+                        <span class="description enw2">1592 th / 10460 (Score: 1710 / 8510)</span>
+                        <br>
+                        <span class="time enw2">Mar 08 - 18, 2025</span>
+                    </li>
+                </ul>
+            </details>
+            <details class="list" id="2024-compititions">
+                <summary class="enw1">2024</summary>
+                <ul>
+                    <li>
+                        <span class="title enw1">Collegiate Programming Examination</span>
+                        <br>
+                        <span class="description enw2">Association of Taiwan Computer Programming Contest</span>
+                        <br>
+                        <span class="description enw2">109 th / 2446 (Solved: 3 / 7)</span>
+                        <br>
+                        <span class="time enw2">Dec 10, 2024</span>
+                    </li>
+                    <li>
+                        <span class="title enw1">2024 Schoolwide Programming Contest</span>
+                        <br>
+                        <span class="description enw2">Department of Computer Science, University of Taipei</span>
+                        <br>
+                        <span class="description enw2">8 th</span>
+                        <br>
+                        <span class="time enw2">Nov 17, 2024</span>
+                    </li>
+                    <li>
+                        <span class="title enw1">Collegiate Programming Examination</span>
+                        <br>
+                        <span class="description enw2">Association of Taiwan Computer Programming Contest</span>
+                        <br>
+                        <span class="description enw2">141 st / 2586 (Solved: 3 / 7)</span>
+                        <br>
+                        <span class="time enw2">Oct 15, 2024</span>
+                    </li>
+                    <li>
+                        <span class="title enw1">picoCTF 2024</span>
+                        <br>
+                        <span class="description enw2">picoCTF</span>
+                        <br>
+                        <span class="description enw2">870 th / 11517 (Score: 3025 / 9225)</span>
+                        <br>
+                        <span class="time enw2">Mar 13 - 27, 2024</span>
+                    </li>
+                </ul>
+            </details>
             <h3 class="enw2" id="links">Links</h3>
             <details id="social_platforms" open>
                 <summary class="enw1">Social Platforms</summary>
