--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             <button class="zhw" onclick="scrollToBlock('communities')">社團與社群</button>
             <button class="zhw" onclick="scrollToBlock('skills')" style="display: none;">技能</button>
             <button class="zhw" onclick="scrollToBlock('certifications')">證照與認證</button>
+            <button class="zhw" onclick="scrollToBlock('compititions')">競賽表現</button>
             <button class="zhw" onclick="scrollToBlock('links')">個人連結</button>
             <script src="/scripts/subnav.js" type="text/javascript" defer></script>
         </div>
@@ -214,6 +215,167 @@
                     <p class="time zhw">Jan 24, 2022</p>
                 </a>
             </div>
+
+            <h3 class="zhw" id="compititions">競賽表現</h3>
+            <details class="list" id="2025-compititions" open>
+                <summary class="zhwb">2025</summary>
+                <ul>
+                    <li>
+                        <span class="title zhwb">114 年度全國大專校院電腦軟體設計競賽</span>
+                        <br>
+                        <span class="description zhw">國立中山大學</span>
+                        <br>
+                        <span class="description zhw">TBA</span>
+                        <br>
+                        <span class="time zhw">Sep 28, 2025</span>
+                    </li>
+                    <li>
+                        <span class="title zhwb">The 2025 ICPC Asia Taiwan Online Programming Contest</span>
+                        <br>
+                        <span class="description zhw">國立陽明交通大學</span>
+                        <br>
+                        <span class="description zhw">TBA</span>
+                        <br>
+                        <span class="time zhw">Sep 20, 2025</span>
+                    </li>
+                    <li>
+                        <span class="title zhwb">2025 北區九校聯盟程式競賽</span>
+                        <br>
+                        <span class="description zhw">國立臺北商業大學資訊管理系</span>
+                        <br>
+                        <span class="description zhw">進階組第三名</span>
+                        <br>
+                        <span class="time zhw">May 24, 2025</span>
+                    </li>
+                    <li>
+                        <span class="title zhwb">大學程式能力檢定 (CPE)</span>
+                        <br>
+                        <span class="description zhw">臺灣程式競賽暨檢定學會</span>
+                        <br>
+                        <span class="description zhw">98 th / 2515 (Solved: 4 / 7)</span>
+                        <br>
+                        <span class="time zhw">May 20, 2025</span>
+                    </li>
+                    <li>
+                        <span class="title zhwb">致理科技大學 114 年度全國程式力競賽</span>
+                        <br>
+                        <span class="description zhw">致理科技大學圖書資訊處</span>
+                        <br>
+                        <span class="description zhw">大專組第三名</span>
+                        <br>
+                        <span class="time zhw">May 10, 2025</span>
+                    </li>
+                    <li>
+                        <span class="title zhwb">大學程式能力檢定 (CPE)</span>
+                        <br>
+                        <span class="description zhw">臺灣程式競賽暨檢定學會</span>
+                        <br>
+                        <span class="description zhw">71 st / 2729 (Solved: 4 / 7)</span>
+                        <br>
+                        <span class="time zhw">Mar 25, 2025</span>
+                    </li>
+                    <li>
+                        <span class="title zhwb">picoCTF 2025</span>
+                        <br>
+                        <span class="description zhw">picoCTF</span>
+                        <br>
+                        <span class="description zhw">1592 th / 10460 (Score: 1710 / 8510)</span>
+                        <br>
+                        <span class="time zhw">Mar 08 - 18, 2025</span>
+                    </li>
+                </ul>
+            </details>
+            <details class="list" id="2024-compititions">
+                <summary class="zhwb">2024</summary>
+                <ul>
+                    <li>
+                        <span class="title zhwb">大學程式能力檢定 (CPE)</span>
+                        <br>
+                        <span class="description zhw">臺灣程式競賽暨檢定學會</span>
+                        <br>
+                        <span class="description zhw">109 th / 2446 (Solved: 3 / 7)</span>
+                        <br>
+                        <span class="time zhw">Dec 10, 2024</span>
+                    </li>
+                    <li>
+                        <span class="title zhwb">臺北市立大學資訊科學系 113 學年度第 1 學期全校程式設計實作競賽</span>
+                        <br>
+                        <span class="description zhw">臺北市立大學資訊科學系</span>
+                        <br>
+                        <span class="description zhw">入圍（第 8 名）</span>
+                        <br>
+                        <span class="time zhw">Nov 12, 2024</span>
+                    </li>
+                    <li>
+                        <span class="title zhwb">大學程式能力檢定 (CPE)</span>
+                        <br>
+                        <span class="description zhw">臺灣程式競賽暨檢定學會</span>
+                        <br>
+                        <span class="description zhw">141 st / 2586 (Solved: 3 / 7)</span>
+                        <br>
+                        <span class="time zhw">Oct 15, 2024</span>
+                    </li>
+                    <li>
+                        <span class="title zhwb">2024 大專 Python 數據精英挑戰暨高中程式設計競賽</span>
+                        <br>
+                        <span class="description zhw">龍華科技大學資訊管理系</span>
+                        <br>
+                        <span class="description zhw">高中職組優選</span>
+                        <br>
+                        <span class="time zhw">Jun 01, 2024</span>
+                    </li>
+                    <li>
+                        <span class="title zhwb">致理科技大學 113 年度全國程式力競賽</span>
+                        <br>
+                        <span class="description zhw">致理科技大學圖書資訊處</span>
+                        <br>
+                        <span class="description zhw">高中職組第二名</span>
+                        <br>
+                        <span class="time zhw">May 18, 2024</span>
+                    </li>
+                    <li>
+                        <span class="title zhwb">picoCTF 2024</span>
+                        <br>
+                        <span class="description zhw">picoCTF</span>
+                        <br>
+                        <span class="description zhw">870 th / 11517 (Score: 3025 / 9225)</span>
+                        <br>
+                        <span class="time zhw">Mar 13 - 27, 2024</span>
+                    </li>
+                    <li>
+                        <span class="title zhwb">2024 資訊奧林匹亞初選考試</span>
+                        <br>
+                        <span class="description zhw">國立臺灣師範大學資訊工程學系 TOI 工作小組</span>
+                        <br>
+                        <span class="description zhw">125 th / 460 (Score: 100 / 500)</span>
+                        <br>
+                        <span class="time zhw">Mar 10, 2024</span>
+                    </li>
+                </ul>
+            </details>
+            <details class="list" id="2023-compititions">
+                <summary class="zhwb">2023</summary>
+                <ul>
+                    <li>
+                        <span class="title zhwb">112 學年度建國中學校內資訊學科能力競賽</span>
+                        <br>
+                        <span class="description zhw">臺北市立建國高級中學資訊科教學團隊</span>
+                        <br>
+                        <span class="description zhw">初賽佳作, 21 st / 89 (Score: 238 / 500)</span>
+                        <br>
+                        <span class="time zhw">Sep 12, 2023</span>
+                    </li>
+                    <li>
+                        <span class="title zhwb">致理科技大學 112 年度全國程式力競賽</span>
+                        <br>
+                        <span class="description zhw">致理科技大學圖書資訊處</span>
+                        <br>
+                        <span class="description zhw">高中職組第二名</span>
+                        <br>
+                        <span class="time zhw">May 20, 2023</span>
+                    </li>
+                </ul>
+            </details>
             
             <h3 class="zhw" id="links">個人連結</h3>
             <details id="social_platforms" open>
