feat: add experience of courses and workshops

--- a/en/index.html
+++ b/en/index.html
@@ -76,6 +76,7 @@
             <button class="enw2" onclick="scrollToBlock('skills')" style="display: none;">Skills</button>
             <button class="enw2" onclick="scrollToBlock('certifications')">Licenses & Certifications</button>
             <button class="enw2" onclick="scrollToBlock('compititions')">Competitions</button>
+            <button class="enw2" onclick="scrollToBlock('courses')">Courses & Workshops</button>
             <button class="enw2" onclick="scrollToBlock('links')">Links</button>
             <script src="/scripts/subnav.js" type="text/javascript" defer></script>
         </div>
@@ -307,6 +308,45 @@
                         <span class="description enw2">870 th / 11517 (Score: 3025 / 9225)</span>
                         <br>
                         <span class="time enw2">Mar 13 - 27, 2024</span>
+                    </li>
+                </ul>
+            </details>
+
+            <h3 class="enw2" id="courses">Courses & Workshops</h3>
+            <details class="list" id="2025-courses" open>
+                <summary class="enw1">2025</summary>
+                <ul>
+                    <li>
+                        <span class="title enw1">2025 Summer School on Information Theory / Communications / Vehicular Technology</span>
+                        <br>
+                        <span class="description enw2">IEEE ComSoc, ITSoc, and VTS Taipei/Tainan Chapter</span>
+                        <br>
+                        <span class="description enw2">Student</span>
+                        <br>
+                        <span class="time enw2">Aug 18 - 19, 2025 (13 hours)</span>
+                    </li>
+                </ul>
+            </details>
+            <details class="list" id="2023-courses">
+                <summary class="enw1">2023</summary>
+                <ul>
+                    <li>
+                        <span class="title enw1">2023 NYCU FinTech Programming Course</span>
+                        <br>
+                        <span class="description enw2">FinTech Innovation Research Center, National Yang Ming Chiao Tung University</span>
+                        <br>
+                        <span class="description enw2">AI Advanced Class Student</span>
+                        <br>
+                        <span class="time enw2">Aug 21 - 24, 2023 (36 hours)</span>
+                    </li>
+                    <li>
+                        <span class="title enw1">Information Security Incubation Program: SecurityFocus Online 2023</span>
+                        <br>
+                        <span class="description enw2">Office of Information Security Incubation Program, Ministry of Education (Taiwan)</span>
+                        <br>
+                        <span class="description enw2">Student</span>
+                        <br>
+                        <span class="time enw2">Jun 07 - 11, 2023 (12 hours)</span>
                     </li>
                 </ul>
             </details>
