--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             <button class="zhw" onclick="scrollToBlock('skills')" style="display: none;">技能</button>
             <button class="zhw" onclick="scrollToBlock('certifications')">證照與認證</button>
             <button class="zhw" onclick="scrollToBlock('compititions')">競賽表現</button>
+            <button class="zhw" onclick="scrollToBlock('courses')">課程與研習</button>
             <button class="zhw" onclick="scrollToBlock('links')">個人連結</button>
             <script src="/scripts/subnav.js" type="text/javascript" defer></script>
         </div>
@@ -373,6 +374,45 @@
                         <span class="description zhw">高中職組第二名</span>
                         <br>
                         <span class="time zhw">May 20, 2023</span>
+                    </li>
+                </ul>
+            </details>
+
+            <h3 class="zhw" id="courses">課程與研習</h3>
+            <details class="list" id="2025-courses" open>
+                <summary class="zhwb">2025</summary>
+                <ul>
+                    <li>
+                        <span class="title zhwb">2025 Summer School on Information Theory/Communications/Vehicular Technology</span>
+                        <br>
+                        <span class="description zhw">IEEE ComSoc, ITSoc, and VTS Taipei/Tainan Chapter</span>
+                        <br>
+                        <span class="description zhw">學員</span>
+                        <br>
+                        <span class="time zhw">Aug 18 - 19, 2025 (13 hours)</span>
+                    </li>
+                </ul>
+            </details>
+            <details class="list" id="2023-courses">
+                <summary class="zhwb">2023</summary>
+                <ul>
+                    <li>
+                        <span class="title zhwb">第七屆國立陽明交大金融科技程式菁英培訓課程</span>
+                        <br>
+                        <span class="description zhw">國立陽明交通大學金融科技創新研究中心</span>
+                        <br>
+                        <span class="description zhw">AI 進階班學員</span>
+                        <br>
+                        <span class="time zhw">Aug 21 - 24, 2023 (36 hours)</span>
+                    </li>
+                    <li>
+                        <span class="title zhwb">教育部先進資通安全實務人才培育計畫 SecurityFocus Online 2023</span>
+                        <br>
+                        <span class="description zhw">教育部先進資通安全實務人才培育計畫推動辦公室</span>
+                        <br>
+                        <span class="description zhw">學員</span>
+                        <br>
+                        <span class="time zhw">Jun 07 - 11, 2023 (12 hours)</span>
                     </li>
                 </ul>
             </details>
