feat: add experience of conferences

--- a/en/index.html
+++ b/en/index.html
@@ -77,6 +77,7 @@
             <button class="enw2" onclick="scrollToBlock('certifications')">Licenses & Certifications</button>
             <button class="enw2" onclick="scrollToBlock('compititions')">Competitions</button>
             <button class="enw2" onclick="scrollToBlock('courses')">Courses & Workshops</button>
+            <button class="enw2" onclick="scrollToBlock('conferences')">Conferences</button>
             <button class="enw2" onclick="scrollToBlock('links')">Links</button>
             <script src="/scripts/subnav.js" type="text/javascript" defer></script>
         </div>
@@ -350,6 +351,41 @@
                     </li>
                 </ul>
             </details>
+
+            <h3 class="enw2" id="conferences">Conferences</h3>
+            <details class="list" id="2025-conf" open>
+                <summary class="enw1">2025</summary>
+                <ul>
+                    <li>
+                        <span class="title enw1">COSCUP x RubyConf Taiwan 2025</span>
+                        <br>
+                        <span class="description enw2">COSCUP</span>
+                        <br>
+                        <span class="description enw2">Attendee</span>
+                        <br>
+                        <span class="time enw2">Aug 09 - 10, 2025</span>
+                    </li>
+                    <li>
+                        <span class="title enw1">SSCI Smart Computing Forum 2025</span>
+                        <br>
+                        <span class="description enw2">Sina Smart Computing Institute</span>
+                        <br>
+                        <span class="description enw2">Staff</span>
+                        <br>
+                        <span class="time enw2">Jul 15 - 17, 2025</span>
+                    </li>
+                    <li>
+                        <span class="title enw1">SITCON 2025</span>
+                        <br>
+                        <span class="description enw2">SITCON</span>
+                        <br>
+                        <span class="description enw2">Attendee</span>
+                        <br>
+                        <span class="time enw2">Mar 08, 2025</span>
+                    </li>
+                </ul>
+            </details>
+
             <h3 class="enw2" id="links">Links</h3>
             <details id="social_platforms" open>
                 <summary class="enw1">Social Platforms</summary>
