--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             <button class="zhw" onclick="scrollToBlock('certifications')">證照與認證</button>
             <button class="zhw" onclick="scrollToBlock('compititions')">競賽表現</button>
             <button class="zhw" onclick="scrollToBlock('courses')">課程與研習</button>
+            <button class="zhw" onclick="scrollToBlock('conferences')">研討會參與</button>
             <button class="zhw" onclick="scrollToBlock('links')">個人連結</button>
             <script src="/scripts/subnav.js" type="text/javascript" defer></script>
         </div>
@@ -413,6 +414,40 @@
                         <span class="description zhw">學員</span>
                         <br>
                         <span class="time zhw">Jun 07 - 11, 2023 (12 hours)</span>
+                    </li>
+                </ul>
+            </details>
+
+            <h3 class="zhw" id="conferences">研討會參與</h3>
+            <details class="list" id="2025-conf" open>
+                <summary class="zhwb">2025</summary>
+                <ul>
+                    <li>
+                        <span class="title zhwb">COSCUP x RubyConf Taiwan 2025</span>
+                        <br>
+                        <span class="description zhw">COSCUP 開源人年會志工</span>
+                        <br>
+                        <span class="description zhw">會眾</span>
+                        <br>
+                        <span class="time zhw">Aug 09 - 10, 2025</span>
+                    </li>
+                    <li>
+                        <span class="title zhwb">2025 智慧運算論壇</span>
+                        <br>
+                        <span class="description zhw">中華智慧運算學會</span>
+                        <br>
+                        <span class="description zhw">工作人員</span>
+                        <br>
+                        <span class="time zhw">Jul 15 - 17, 2025</span>
+                    </li>
+                    <li>
+                        <span class="title zhwb">SITCON 2025</span>
+                        <br>
+                        <span class="description zhw">SITCON 學生計算機年會籌備團隊</span>
+                        <br>
+                        <span class="description zhw">會眾</span>
+                        <br>
+                        <span class="time zhw">Mar 08, 2025</span>
                     </li>
                 </ul>
             </details>
