style: adjust popup layout and style setting

--- a/sections/en/exp_tonghsun.html
+++ b/sections/en/exp_tonghsun.html
@@ -1,12 +1,29 @@
-<h2 class="enw2">Tong Hsun Technology Co., Ltd. (English name TBD)</h2>
-<h3 class="enw2">Company Overview</h3>
-<p class="enw2">
+<h2>
     <a href="https://findbiz.nat.gov.tw/fts/query/QueryBar/queryInit.do?banNo=50901194&fhl=en" target="_blank">
-        Company Information - Ministry of Economic Affairs of Taiwan
+        童訊科技股份有限公司
     </a>
-</p>
-<h3 class="enw2">Work Experience Record</h3>
-<ul class="enw2">
-    <li>Part-time Teaching Assistant - Children's Block-Based Programming Course (Sep 2024 ~ Present)</li>
-    <li>Part-time Teacher - Children's Block-Based Programming Course (Mar 2025 ~ Present)</li>
+</h2>
+<ul>
+    <li>
+        <div class="timeline-side">
+            <div class="timeline-dot"></div>
+            <div class="timeline-line"></div>
+        </div>
+        <div class="timeline-content">
+            <span class="title enw1">Part-time Teacher - Children's Block-Based Programming Course</span>
+            <br>
+            <span class="time">Mar 2025 - Present</span>
+        </div>
+    </li>
+    <li>
+        <div class="timeline-side">
+            <div class="timeline-dot"></div>
+            <div class="timeline-line"></div>
+        </div>
+        <div class="timeline-content">
+            <span class="title enw1">Part-time Teaching Assistant - Children's Block-Based Programming Course</span>
+            <br>
+            <span class="time">Sep 2024 - Present</span>
+        </div>
+    </li>
 </ul>
