--- a/sections/tw/exp_tonghsun.html
+++ b/sections/tw/exp_tonghsun.html
@@ -1,8 +1,29 @@
-<h2 class="zhwb">童訊科技股份有限公司</h2>
-<h3 class="zhw">公司簡介</h3>
-<p class="zhw"><a href="https://findbiz.nat.gov.tw/fts/query/QueryBar/queryInit.do?banNo=50901194&fhl=zh_TW" target="_blank">公司資料-經濟部</a></p>
-<h3 class="zhw">任職紀錄</h3>
-<ul class="zhw">
-    <li>兼職課程助教 (2024/09 ~ Present)</li>
-    <li>兼職課程講師 (2025/03 ~ Present)</li>
+<h2>
+    <a href="https://findbiz.nat.gov.tw/fts/query/QueryBar/queryInit.do?banNo=50901194&fhl=zh_TW" target="_blank">
+        童訊科技股份有限公司
+    </a>
+</h2>
+<ul>
+    <li>
+        <div class="timeline-side">
+            <div class="timeline-dot"></div>
+            <div class="timeline-line"></div>
+        </div>
+        <div class="timeline-content">
+            <span class="title">兼職兒童積木程式課程講師</span>
+            <br>
+            <span class="time">Mar 2025 - Present</span>
+        </div>
+    </li>
+    <li>
+        <div class="timeline-side">
+            <div class="timeline-dot"></div>
+            <div class="timeline-line"></div>
+        </div>
+        <div class="timeline-content">
+            <span class="title">兼職兒童積木程式課程助教</span>
+            <br>
+            <span class="time">Sep 2024 - Present</span>
+        </div>
+    </li>
 </ul>
