--- a/sections/en/act_infor35th.html
+++ b/sections/en/act_infor35th.html
@@ -1,16 +1,29 @@
-<h2 class="enw2">INFOR 35th</h2>
-<h3 class="enw2">Organization Overview</h3>
-<p class="enw2">
-    The Chien Kuo Information Club (Abbreviation: INFOR) is a school club that was founded in 1988. It is one of the most historic and popular student clubs at Chien Kuo High School, bringing together talents in various fields of information technology and those with great interest or passion for this domain. Many national representatives in information competitions have been members of the club, such as Cheng-Hao Yang (2020 IOI Silver Medal), Ping-Hsuan Lin (2021 IOI Gold Medal), Jhao-Syun Lai (2022 IOI Silver Medal), and Ting-Wei Chang (2023 IOI Silver Medal).
-    <br>
-    We hope that every member can learn at their own pace, exploring fields they are interested in. We also strive to break barriers between senior and junior members to deepen camaraderie, fostering an environment where members can interact freely. Our vision is to be a cradle for future national representatives and experts in information technology, a support for those aiming to pursue degrees in computer science and electrical engineering, and a provider of the highest quality courses and dedication to serve our members and promote the field of information technology.
-</p>
-<p class="enw2">
-    <a href="https://35.infor.org" target="_blank">Club Website</a>
-    (Note: The page is in Chinese)
-</p>
-<h3 class="enw2">Participation Record</h3>
-<ul class="enw2">
-    <li>Internal Affairs Officer (Feb 2023 ~ Jul 2023)</li>
-    <li>Co-Instructor for Web Development Training Course (Mar 2023 ~ Jun 2023)</li>
+<h2>
+    <a href="https://35.infor.org" target="_blank">
+        INFOR 35th
+    </a>
+</h2>
+<ul>
+    <li>
+        <div class="timeline-side">
+            <div class="timeline-dot"></div>
+            <div class="timeline-line"></div>
+        </div>
+        <div class="timeline-content">
+            <span class="title enw1">Co-Instructor for Web Development Training Course</span>
+            <br>
+            <span class="time">Mar 2023 - Jun 2023</span>
+        </div>
+    </li>
+    <li>
+        <div class="timeline-side">
+            <div class="timeline-dot"></div>
+            <div class="timeline-line"></div>
+        </div>
+        <div class="timeline-content">
+            <span class="title enw1">Internal Affairs Officer</span>
+            <br>
+            <span class="time">Feb 2023 - Jul 2023</span>
+        </div>
+    </li>
 </ul>
