--- a/sections/tw/act_infor35th.html
+++ b/sections/tw/act_infor35th.html
@@ -1,13 +1,29 @@
-<h2 class="zhwb">建國中學資訊社35th</h2>
-<h3 class="zhw">組織簡介</h3>
-<p class="zhw">
-    建國中學資訊社（英文全名：Chien Kuo Information Club，簡稱INFOR），自民國77年創社至今已邁入第35屆，為建國中學歷史悠久、最熱門的社團之一，聚集了各種資訊領域的專才及對資訊領域有極高興趣或熱忱者，有多位資訊競賽國手皆曾為本社社員，如楊承澔(2020 IOI銀牌)、林秉軒(2021 IOI金牌)、賴昭勳(2022 IOI銀牌)、張庭瑋(2023 IOI銀牌)等。
-    <br>
-    我們希望進來的社員都能以最適合自己的步調，找到自己有興趣的領域進行深入學習，我們也嘗試破除學長學弟間的隔閡，深化彼此的情誼，希望能讓社員們無須拘束進行交流，亦期望能成為資訊國手與專家的搖籃、想進入電資科系者的助力，用最高品質的課程與態度，全心全意服務社員、推廣資訊。
-</p>
-<p class="zhw"><a href="https://35.infor.org/" target="_blank">社團網站</a></p>
-<h3 class="zhw">參與紀錄</h3>
-<ul class="zhw">
-    <li>內務 (2023/02 ~ 2023/07)</li>
-    <li>網頁培訓班共同講師 (2023/03 ~ 2023/06)</li>
+<h2>
+    <a href="https://35.infor.org/" target="_blank">
+        建國中學資訊社35th
+    </a>
+</h2>
+<ul>
+    <li>
+        <div class="timeline-side">
+            <div class="timeline-dot"></div>
+            <div class="timeline-line"></div>
+        </div>
+        <div class="timeline-content">
+            <span class="title">網頁培訓班共同講師</span>
+            <br>
+            <span class="time">Mar 2023 - Jun 2023</span>
+        </div>
+    </li>
+    <li>
+        <div class="timeline-side">
+            <div class="timeline-dot"></div>
+            <div class="timeline-line"></div>
+        </div>
+        <div class="timeline-content">
+            <span class="title">內務</span>
+            <br>
+            <span class="time">Feb 2023 - Jul 2023</span>
+        </div>
+    </li>
 </ul>
