feat: add new experience of competition and course

--- a/en/index.html
+++ b/en/index.html
@@ -75,7 +75,7 @@
             <button class="enw2" onclick="scrollToBlock('communities')">Clubs & Communities</button>
             <button class="enw2" onclick="scrollToBlock('skills')" style="display: none;">Skills</button>
             <button class="enw2" onclick="scrollToBlock('certifications')">Licenses & Certifications</button>
-            <button class="enw2" onclick="scrollToBlock('compititions')">Competitions</button>
+            <button class="enw2" onclick="scrollToBlock('competitions')">Competitions</button>
             <button class="enw2" onclick="scrollToBlock('courses')">Courses & Workshops</button>
             <button class="enw2" onclick="scrollToBlock('conferences')">Conferences</button>
             <button class="enw2" onclick="scrollToBlock('links')">Links</button>
@@ -220,10 +220,19 @@
                 </a>
             </div>
 
-            <h3 class="enw2" id="compititions">Competitions</h3>
-            <details class="list" id="2025-compititions" open>
+            <h3 class="enw2" id="competitions">Competitions</h3>
+            <details class="list" id="2025-competitions" open>
                 <summary class="enw1">2025</summary>
                 <ul>
+                    <li>
+                        <span class="title enw1">The 2025 ICPC Asia Taiwan Online Programming Contest</span>
+                        <br>
+                        <span class="description enw2">Association of Taiwan Computer Programming Contest</span>
+                        <br>
+                        <span class="description enw2">108th / 226 (Solved: 3 / 12)</span>
+                        <br>
+                        <span class="time enw2">Sep 20, 2025</span>
+                    </li>
                     <li>
                         <span class="title enw1">Collegiate Programming Examination</span>
                         <br>
@@ -253,7 +262,7 @@
                     </li>
                 </ul>
             </details>
-            <details class="list" id="2024-compititions">
+            <details class="list" id="2024-competitions">
                 <summary class="enw1">2024</summary>
                 <ul>
                     <li>
@@ -296,7 +305,21 @@
             </details>
 
             <h3 class="enw2" id="courses">Courses & Workshops</h3>
-            <details class="list" id="2023-courses" open>
+            <details class="list" id="2025-courses" open>
+                <summary class="enw1">2025</summary>
+                <ul>
+                    <li>
+                        <span class="title enw1">2025 Summer School on Information Theory / Communications / Vehicular Technology</span>
+                        <br>
+                        <span class="description enw2">IEEE ComSoc, ITSoc, and VTS Taipei/Tainan Chapter</span>
+                        <br>
+                        <span class="description enw2">Student</span>
+                        <br>
+                        <span class="time enw2">Aug 18 - 19, 2025 (13 hours)</span>
+                    </li>
+                </ul>
+            </details>
+            <details class="list" id="2023-courses">
                 <summary class="enw1">2023</summary>
                 <ul>
                     <li>
