--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <button class="zhw" onclick="scrollToBlock('communities')">社團與社群</button>
             <button class="zhw" onclick="scrollToBlock('skills')" style="display: none;">技能</button>
             <button class="zhw" onclick="scrollToBlock('certifications')">證照與認證</button>
-            <button class="zhw" onclick="scrollToBlock('compititions')">競賽表現</button>
+            <button class="zhw" onclick="scrollToBlock('competitions')">競賽表現</button>
             <button class="zhw" onclick="scrollToBlock('courses')">課程與研習</button>
             <button class="zhw" onclick="scrollToBlock('conferences')">研討會參與</button>
             <button class="zhw" onclick="scrollToBlock('links')">個人連結</button>
@@ -218,10 +218,19 @@
                 </a>
             </div>
 
-            <h3 class="zhw" id="compititions">競賽表現</h3>
-            <details class="list" id="2025-compititions" open>
+            <h3 class="zhw" id="competitions">競賽表現</h3>
+            <details class="list" id="2025-competitions" open>
                 <summary class="zhwb">2025</summary>
                 <ul>
+                    <li>
+                        <span class="title zhwb">The 2025 ICPC Asia Taiwan Online Programming Contest</span>
+                        <br>
+                        <span class="description zhw">臺灣程式競賽暨檢定學會</span>
+                        <br>
+                        <span class="description zhw">108th / 226 (Solved: 3 / 12)</span>
+                        <br>
+                        <span class="time zhw">Sep 20, 2025</span>
+                    </li>
                     <li>
                         <span class="title zhwb">2025 北區九校聯盟程式競賽</span>
                         <br>
@@ -269,7 +278,7 @@
                     </li>
                 </ul>
             </details>
-            <details class="list" id="2024-compititions">
+            <details class="list" id="2024-competitions">
                 <summary class="zhwb">2024</summary>
                 <ul>
                     <li>
@@ -337,7 +346,7 @@
                     </li>
                 </ul>
             </details>
-            <details class="list" id="2023-compititions">
+            <details class="list" id="2023-competitions">
                 <summary class="zhwb">2023</summary>
                 <ul>
                     <li>
@@ -362,7 +371,21 @@
             </details>
 
             <h3 class="zhw" id="courses">課程與研習</h3>
-            <details class="list" id="2023-courses" open>
+            <details class="list" id="2025-courses" open>
+                <summary class="zhwb">2025</summary>
+                <ul>
+                    <li>
+                        <span class="title zhwb">2025 Summer School on Information Theory/Communications/Vehicular Technology</span>
+                        <br>
+                        <span class="description zhw">IEEE ComSoc, ITSoc, and VTS Taipei/Tainan Chapter</span>
+                        <br>
+                        <span class="description zhw">學員</span>
+                        <br>
+                        <span class="time zhw">Aug 18 - 19, 2025 (13 hours)</span>
+                    </li>
+                </ul>
+            </details>
+            <details class="list" id="2023-courses">
                 <summary class="zhwb">2023</summary>
                 <ul>
                     <li>
